2008-10-01 Lars Uebernickel <larsuebernickel@gmx.de>
	* pdf.c: Use $TMPDIR for storing temporary files, and only use
	P_tmpdir or /tmp if $TMPDIR is not writable.

2008-09-25  Till Kamppeter <till.kamppeter@gmail.com>

	* beh.in: Use /tmp as temporary directory when CUPS does not
	  supply the $TMPDIR environment variable (Ubuntu bug #268284).

2008-09-24 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomaticrip.c: Remove leading whitespace from jobs instead of
	passing it on. Flush() standard output after writing leading data to
	ensure it comes first (not after or between the output of the
	renderer).

2008-09-24 Lars Uebernickel <larsuebernickel@gmx.de>
	* pdf.c, renderer.c: Put JCL data also around PDF documents

2008-08-13 Lars Uebernickel <larsuebernickel@gmx.de>
	* pdf.c: foomatic-rip inserted the -sOutputFile GhostScript command
	  line argument at the wrong position when printing a PDF file (not from
	  stdin), which led GhostScript to crash
	* options.c: Option settings can be given in the PPD file before the
	  option is "declared", which led foomatic-rip to think that there are
	  PostScript options (the default) in the PPD and the driver could not
	  understand PDF input. Now, foomatic-rip checks for PostScript
	  options after the whole PPD has been read.

2008-08-12 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Use FoomaticRIPCommandLinePDF if it is available. Don't
	  use it if at least one option wants to insert PostScript code
	* pdf.c: Only create a temporary file if there actually are page
	  overrides, not if printing the whole document
	* postscript.c: Fixed bug #142, custom input value which was wrongly
	  set by pstops was not set to the correct value by foomatic-rip

2008-08-05 Lars Uebernickel <larsuebernickel@gmx.de>
	* renderer.c: fixed bug #146, merging of JCL options omitted some
	  options.
	* options.c: Fixed bug #151, crash when default value of an option was
	  set from a composite option.
